fix: 주간플래너 수정